<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <LinearLayout
        android:id="@+id/llParent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSearch"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:background="@drawable/blue_border_shape"
            android:layout_height="wrap_content"
            android:hint="@string/search_view"
            android:inputType="text"
            android:textSize="20sp"
            android:maxLines="1"
            android:textColor="@color/white"
            android:imeActionLabel="@string/search"
            android:imeOptions="actionSearch"
            app:textInputLayoutFocusedRectEnabled="false"
           android:drawableRight="@drawable/ic_search_white_24dp" />

        <TextView
            android:id="@+id/tvInstruction"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/instruction"
            android:textSize="18sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSearch"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="vertical" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/search_activity_bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"
            app:elevation="0dp"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/white"
            app:menu="@menu/search_bottom_navigation_menu" />
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_navigation_drawer"
        app:menu="@menu/dev_menu_navigation_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>